--- a/formacaoCienciaDadosR/02_LimpezaDeDados/fcd-202_atividade.Rmd
+++ b/formacaoCienciaDadosR/02_LimpezaDeDados/fcd-202_atividade.Rmd
@@ -1,5 +1,13 @@
 ---
 Limpeza e Tratamento de Dados
+Atividade
+
+Tratar dados 'tempo.csv'
+Aparência: sol, nublado, chuva
+Temperatura: -130 ~ 130 F
+Umidade: 0 ~ 100
+Jogar: sim/nao
+Tratar valores NAs
 ---
 
 ```{r}
